add new project structure

--- a/options.html
+++ b/options.html
@@ -1,64 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8"/>
-    <link id="favicon" rel="icon" type="image/png" href="assets/images/icon.png">
-    <title>Popup App</title>
-    <link type="text/css" rel="stylesheet" href="./assets/styles/options.css">
-    <script src="assets/libs/jquery-2.0.3.min.js"></script>
-    <script src="assets/scripts/options.js" type="text/javascript"></script>
+    <meta charset="UTF-8">
+    <title></title>
 </head>
 <body>
-<div id="container">
-    <div id="sidebar">
-        <div id="popup-app">Popup App</div>
-        <div id="settings">
-            <ul>
-                <li class="settings-item">Default Settings</li>
-                <li class="settings-item">Special Sites</li>
-                <li class="settings-item">Popup History</li>
-            </ul>
-        </div>
-    </div>
-    <div id="splitter"></div>
-    <div id="content">
-        <div id="content-title">Default Settings</div>
-        <div class="content-body">
-            <div class="content-block">
-                <div class="content-block-title">Window Size</div>
-                <div class="content-block-body">
-                    <div class="content-item">
-                        <span class="item-prefix">Default height:</span><input type="text" id="default-height">
-                    </div>
-                    <div class="content-item">
-                        <span class="item-prefix">Default width:</span><input type="text" id="default-width">
-                    </div>
-                </div>
-            </div>
-            <div class="content-block">
-                <div class="content-block-title">Popup Action</div>
-                <div class="content-block-body">
-                    <div class="content-item">
-                        <input type="checkbox" id="close-tab">
-                        <span>Close tab after popup. Special settings will not be overwritten.</span>
-                    </div>
-                    <div class="content-item">
-                        <input type="checkbox" id="always-popup">
-                        <span>Always popup special sites. This setting will overwrite all others.</span>
-                    </div>
-                    <div class="content-item">
-                        <input type="checkbox" id="always-not-popup">
-                        <span>Always not popup special sites. This setting will overwrite all others.</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div id="content-tail">
-            <button id="save">Save</button>
-            <button id="reset">Reset Default</button>
-        </div>
-    </div>
-</div>
 
 </body>
 </html>
