--- a/main.html
+++ b/main.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+<html>
 <head>
     <meta charset="UTF-8"/>
-    <title></title>
-    <script src="assets/libs/jquery-2.0.3.min.js"></script>
-    <script src="assets/scripts/settings.js"></script>
-    <script src="assets/scripts/popup.js" type="text/javascript"></script>
+    <title>Popup Window</title>
+    <script src="./static/js/libs/jquery-2.1.4.js"></script>
+    <script src="./static/js/settings.js" type="text/javascript"></script>
+    <script src="./static/js/popup.js" type="text/javascript"></script>
 </head>
 <body>
 </body>
